--- a/Lab-10-TFX-Interactive/tfx_interactive.ipynb
+++ b/Lab-10-TFX-Interactive/tfx_interactive.ipynb
@@ -8,8 +8,7 @@
       "private_outputs": true,
       "collapsed_sections": [
         "wdeKOEkv1Fe8"
-      ],
-      "include_colab_link": true
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jarokaz/mlops-miniworkshop/blob/master/Lab-10-TFX-Interactive/tfx_interactive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -68,10 +57,9 @@
         "colab_type": "text"
       },
       "source": [
-        "# TensorFlow Extended (TFX) Workshop\n",
-        "**[Run this notebook in Colab](https://colab.sandbox.google.com/github/tensorflow/workshops/blob/master/tfx_colabs/TFX_Workshop_Colab.ipynb)**\n",
-        "### Running a simple pipeline manually in a Colab Notebook\n",
-        "This notebook demonstrates how to use Jupyter/Colab notebooks for TFX iterative development.  Here, we walk through the Chicago Taxi example in an interactive notebook.\n",
+        "# TFX interactive development.\n",
+        "\n",
+        "This notebook demonstrates how to use Jupyter notebooks for TFX iterative development.  \n",
         "\n",
         "Working in an interactive notebook is a useful way to become familiar with the structure of a TFX pipeline.  It's also useful when doing development of your own pipelines as a lightweight development environment, but you should be aware that there are differences in the way interactive notebooks are orchestrated, and how they access metadata artifacts.\n",
         "\n",
@@ -93,8 +81,43 @@
       "source": [
         "## Setup\n",
         "First, install the necessary packages, download data, import modules and set up paths.\n",
-        "\n",
-        "### Install TFX and TensorFlow\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NMzm7YerqwBS",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Set Colab to TFX 2.0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qGLQhxjKq3EJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "try:\n",
+        "  %tensorflow_version 2.x\n",
+        "except:\n",
+        "  pass"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tbWskRN2qsCD",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Install TFX\n",
         "\n",
         "> #### Note\n",
         "> Because of some of the updates to packages you must use the button at the bottom of the output of this cell to restart the runtime.  Following restart, you should rerun this cell."
@@ -109,10 +132,7 @@
       },
       "source": [
         "!pip install -q -U \\\n",
-        "  tensorflow==2.0.0 \\\n",
-        "  tfx==0.15.0rc0 \\\n",
-        "  pyarrow==0.14.1\n",
-        "!pip install -U grpcio==1.24.3"
+        "  tfx==0.15.0"
       ],
       "execution_count": 0,
       "outputs": []
@@ -271,7 +291,9 @@
       },
       "source": [
         "## Create the InteractiveContext\n",
-        "An interactive context is used to provide global context when running a TFX pipeline in a notebook without using a runner or orchestrator such as Apache Airflow or Kubeflow.  This style of development is only useful when developing the code for a pipeline, and cannot currently be used to deploy a working pipeline to production."
+        "An interactive context is used to provide global context when running a TFX pipeline in a notebook without using a runner or orchestrator such as Apache Airflow or Kubeflow.  This style of development is only useful when experimenting and developing the code for a pipeline, and cannot currently be used to deploy a working pipeline to production.\n",
+        "\n",
+        "When creating  InteractiveContext using default parameters, TFX is configured to use a temporary directory with an ephemeral ML Metadata database instance. To use your own pipeline root or database, the optional properties `pipeline_root` and `metadata_connection_config` may be passed to InteractiveContext."
       ]
     },
     {
@@ -282,11 +304,6 @@
         "colab": {}
       },
       "source": [
-        "# Here, we create an InteractiveContext using default parameters. This will\n",
-        "# use a temporary directory with an ephemeral ML Metadata database instance.\n",
-        "# To use your own pipeline root or database, the optional properties\n",
-        "# `pipeline_root` and `metadata_connection_config` may be passed to\n",
-        "# InteractiveContext.\n",
         "context = InteractiveContext()"
       ],
       "execution_count": 0,
@@ -314,9 +331,9 @@
       },
       "source": [
         "### The ExampleGen Component\n",
-        "In any ML development process the first step when starting code development is to ingest the training and test datasets.  The `ExampleGen` component brings data into the TFX pipeline.\n",
+        "In any ML development process the first step when starting code development is to ingest the training and test datasets.  The `ExampleGen` component brings data into the TFX pipeline. It reads the data from the source, splits the data into a configured number of splits, converts the data into the TFRecords format, and stores the data into the configured Artifact store.\n",
         "\n",
-        "Create an ExampleGen component and run it."
+        "In this walkthrough, you use `CsvExampleGen` that is a specialization of `ExampleGen` for CSV files. TFX provides other types of `ExampleGen` components including ones that can source data from databases and datawarehouse like BigQuery."
       ]
     },
     {
@@ -327,10 +344,7 @@
         "colab": {}
       },
       "source": [
-        "# Use the packaged CSV input data.\n",
         "input_data = external_input(_data_root)\n",
-        "\n",
-        "# Brings data into the pipeline or otherwise joins/converts training data.\n",
         "example_gen = CsvExampleGen(input=input_data)\n",
         "context.run(example_gen)"
       ],
@@ -417,7 +431,6 @@
         "colab": {}
       },
       "source": [
-        "# Computes statistics over data for visualization and example validation.\n",
         "statistics_gen = StatisticsGen(\n",
         "    input_data=example_gen.outputs['examples'])\n",
         "context.run(statistics_gen)"
@@ -1480,25 +1493,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zhir0gtOI615",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "evaluation_uri = model_analyzer.outputs['output'].get()[0].uri\n",
-        "eval_result = tfma.load_eval_result(evaluation_uri)\n",
-        "\n",
-        "print('{}\\n\\nslicing_metrics:\\n'.format(eval_result))\n",
-        "\n",
-        "for metric in eval_result.slicing_metrics:\n",
-        "  pp.pprint(metric)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "979uI-xB9LPq",
@@ -1507,24 +1501,6 @@
       "source": [
         "Examine the output data."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "r79jT5uPDfTG",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "eval_path_uri = model_analyzer.outputs['output'].get()[0].uri\n",
-        "tfrecord_filenames = [os.path.join(eval_path_uri, name)\n",
-        "                      for name in os.listdir(eval_path_uri)]\n",
-        "pp.pprint(tfrecord_filenames)\n",
-        "dataset = tf.data.TFRecordDataset(tfrecord_filenames)\n",
-        "pp.pprint(dataset)"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
