--- a/Lab-10-TFX-Interactive/tfx-interactive-higgs.ipynb
+++ b/Lab-10-TFX-Interactive/tfx-interactive-higgs.ipynb
@@ -126,10 +126,7 @@
         "colab": {}
       },
       "source": [
-        "try:\n",
-        "  %tensorflow_version 2.x\n",
-        "except:\n",
-        "  pass"
+        "%tensorflow_version 2.x"
       ],
       "execution_count": 0,
       "outputs": []
@@ -269,9 +266,11 @@
       },
       "source": [
         "_data_root = tempfile.mkdtemp(prefix='tfx-data')\n",
-        "DATA_PATH = 'https://storage.googleapis.com/workshop-datasets/higgs/tiny/HIGGS.csv'\n",
-        "_data_filepath = os.path.join(_data_root, \"data.csv\")\n",
-        "urllib.request.urlretrieve(DATA_PATH, _data_filepath)"
+        "DATA_PATH = 'https://storage.googleapis.com/workshop-datasets/higgs/{}/data.csv'\n",
+        "for folder in ['train', 'eval']:\n",
+        "    os.makedirs(os.path.join(_data_root, folder), exist_ok=True)\n",
+        "    _data_filepath = os.path.join(_data_root, folder, \"data.csv\")\n",
+        "    urllib.request.urlretrieve(DATA_PATH.format(folder), _data_filepath)"
       ],
       "execution_count": 0,
       "outputs": []
