--- a/Lab-10-TFX-Interactive/tfx-interactive-higgs.ipynb
+++ b/Lab-10-TFX-Interactive/tfx-interactive-higgs.ipynb
@@ -200,6 +200,8 @@
         "from tfx.proto import pusher_pb2\n",
         "from tfx.proto import trainer_pb2\n",
         "from tfx.utils.dsl_utils import external_input\n",
+        "from tfx.proto import example_gen_pb2\n",
+        "\n",
         "\n",
         "from tensorflow.core.example import example_pb2\n",
         "from tensorflow_metadata.proto.v0 import anomalies_pb2\n",
@@ -267,10 +269,14 @@
       "source": [
         "_data_root = tempfile.mkdtemp(prefix='tfx-data')\n",
         "DATA_PATH = 'https://storage.googleapis.com/workshop-datasets/higgs/{}/data.csv'\n",
-        "for folder in ['train', 'eval']:\n",
-        "    os.makedirs(os.path.join(_data_root, folder), exist_ok=True)\n",
-        "    _data_filepath = os.path.join(_data_root, folder, \"data.csv\")\n",
-        "    urllib.request.urlretrieve(DATA_PATH.format(folder), _data_filepath)"
+        "\n",
+        "os.makedirs(os.path.join(_data_root, 'train'), exist_ok=True)\n",
+        "_train_data_path = os.path.join(_data_root, 'train', 'data.csv')\n",
+        "urllib.request.urlretrieve(DATA_PATH.format('train'), _train_data_path)\n",
+        "\n",
+        "os.makedirs(os.path.join(_data_root, 'eval'), exist_ok=True)\n",
+        "_eval_data_path = os.path.join(_data_root, 'eval', 'data.csv')\n",
+        "urllib.request.urlretrieve(DATA_PATH.format('eval'), _eval_data_path)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -293,7 +299,7 @@
         "colab": {}
       },
       "source": [
-        "!head {_data_filepath}"
+        "!head {_eval_data_path}"
       ],
       "execution_count": 0,
       "outputs": []
@@ -301,28 +307,141 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "8ONIE_hdkPS4"
+        "id": "FJurE_cKtj1R",
+        "colab_type": "text"
       },
       "source": [
-        "## Create the InteractiveContext\n",
-        "An interactive context is used to provide global context when running a TFX pipeline in a notebook without using a runner or orchestrator such as Apache Airflow or Kubeflow.  This style of development is only useful when experimenting and developing the code for a pipeline, and cannot currently be used to deploy a working pipeline to production.\n",
+        "## Explore data\n",
+        "### Compute and visualize statistics\n",
+        "First we'll use [`tfdv.generate_statistics_from_csv`](https://www.tensorflow.org/tfx/data_validation/api_docs/python/tfdv/generate_statistics_from_csv) to compute statistics for our training data. (ignore the snappy warnings)\n",
         "\n",
-        "When creating  InteractiveContext using default parameters, TFX is configured to use a temporary directory with an ephemeral ML Metadata database instance. To use your own pipeline root or database, the optional properties `pipeline_root` and `metadata_connection_config` may be passed to InteractiveContext."
+        "TFDV can compute descriptive [statistics](https://github.com/tensorflow/metadata/blob/v0.6.0/tensorflow_metadata/proto/v0/statistics.proto) that provide a quick overview of the data in terms of the features that are present and the shapes of their value distributions.\n",
+        "\n",
+        "Internally, TFDV uses [Apache Beam](https://beam.apache.org/)'s data-parallel processing framework to scale the computation of statistics over large datasets. For applications that wish to integrate deeper with TFDV (e.g., attach statistics generation at the end of a data-generation pipeline), the API also exposes a Beam PTransform for statistics generation."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "uhFy960FvX5e",
         "colab_type": "code",
-        "id": "0Rh6K5sUf9dd",
         "colab": {}
       },
       "source": [
-        "context = InteractiveContext()"
+        "train_stats = tfdv.generate_statistics_from_csv(\n",
+        "    data_location=_train_data_path)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e3CeRlkdvvk_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now let's use [`tfdv.visualize_statistics`](https://www.tensorflow.org/tfx/data_validation/api_docs/python/tfdv/visualize_statistics), which uses [Facets](https://pair-code.github.io/facets/) to create a succinct visualization of our training data:\n",
+        "\n",
+        "* Try clicking \"expand\" above the charts to change the display\n",
+        "* Try switching between the log and linear scales, \n",
+        "* Try selecting \"quantiles\" from the \"Chart to show\" menu, and hover over the markers to show the quantile percentages"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Oph4LeiIwXv7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "tfdv.visualize_statistics(train_stats)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W5YrIVy2xKTx",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Infer a schema\n",
+        "\n",
+        "Now let's use [`tfdv.infer_schema`](https://www.tensorflow.org/tfx/data_validation/api_docs/python/tfdv/infer_schema) to create a schema for our data.  A schema defines constraints for the data that are relevant for ML. Example constraints include the data type of each feature, whether it's numerical or categorical, or the frequency of its presence in the data.  For categorical features the schema also defines the domain - the list of acceptable values.  Since writing a schema can be a tedious task, especially for datasets with lots of features, TFDV provides a method to generate an initial version of the schema based on the descriptive statistics.\n",
+        "\n",
+        "Getting the schema right is important because the rest of our production pipeline will be relying on the schema that TFDV generates to be correct.  The schema also provides documentation for the data, and so is useful when different developers work on the same data.  Let's use [`tfdv.display_schema`](https://www.tensorflow.org/tfx/data_validation/api_docs/python/tfdv/display_schema) to display the inferred schema so that we can review it."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vSxpuoqMwiYx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "schema = tfdv.infer_schema(statistics=train_stats)\n",
+        "tfdv.display_schema(schema=schema)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iMjexWQgxoYB",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Check evaluation data for errors\n",
+        "\n",
+        "So far we've only been looking at the training data.  It's important that our evaluation data is consistent with our training data, including that it uses the same schema.  It's also important that the evaluation data includes examples of roughly the same ranges of values for our numerical features as our training data, so that our coverage of the loss surface during evaluation is roughly the same as during training.  The same is true for categorical features.  Otherwise, we may have training issues that are not identified during evaluation, because we didn't evaluate part of our loss surface.\n",
+        "\n",
+        "* Notice that each feature now includes statistics for both the training and evaluation datasets.\n",
+        "* Notice that the charts now have both the training and evaluation datasets overlaid, making it easy to compare them.\n",
+        "* Notice that the charts now include a percentages view, which can be combined with log or the default linear scales.\n",
+        "* Notice that some features are significantly different for the training versus the evaluation datasets, in particular check the mean and median.  Will that cause problems?\n",
+        "* Click expand on the Numeric Features chart, and select the log scale.  Review the `n_hrefs` feature, and notice the difference in the max.  Will evaluation miss parts of the loss surface?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XTBQBM2-wiil",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o8zyqsQwwimE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5ec6aPcawk8c",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -332,11 +451,27 @@
       },
       "source": [
         "# Run TFX Components Interactively\n",
+        "An interactive context is used to provide global context when running a TFX pipeline in a notebook without using a runner or orchestrator such as Apache Airflow or Kubeflow. This style of development is only useful when experimenting and developing the code for a pipeline, and cannot currently be used to deploy a working pipeline to production.\n",
+        "\n",
+        "When creating InteractiveContext using default parameters, TFX is configured to use a temporary directory with an ephemeral ML Metadata database instance. To use your own pipeline root or database, the optional properties pipeline_root and metadata_connection_config may be passed to InteractiveContext.\n",
         "\n",
         "---\n",
         "\n",
         "In the cells that follow you will construct TFX components and run each one interactively within the InteractiveContext to obtain `ExecutionResult` objects.  This mirrors the process of an orchestrator running components in a TFX DAG based on when the dependencies for each component are met."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vpuHrNK5xA_k",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "context = InteractiveContext()"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -359,8 +494,12 @@
         "colab": {}
       },
       "source": [
+        "input_config = example_gen_pb2.Input(splits=[\n",
+        "    example_gen_pb2.Input.Split(name='train', pattern='train/*'),\n",
+        "    example_gen_pb2.Input.Split(name='eval', pattern='eval/*')                              \n",
+        "])\n",
         "input_data = external_input(_data_root)\n",
-        "example_gen = CsvExampleGen(input=input_data)\n",
+        "example_gen = CsvExampleGen(input=input_data,  input_config=input_config)\n",
         "context.run(example_gen)"
       ],
       "execution_count": 0,
@@ -471,7 +610,7 @@
         "colab": {}
       },
       "source": [
-        "train_uri = statistics_gen.outputs['statistics'].get()[0].uri\n",
+        "train_uri = statistics_gen.outputs['statistics'].get()[1].uri\n",
         "tfrecord_filenames = [os.path.join(train_uri, name)\n",
         "                      for name in os.listdir(train_uri)]\n",
         "dataset = tf.data.TFRecordDataset(tfrecord_filenames)\n",
