--- a/Lab-10-TFX-Interactive/tfx-interactive-higgs.ipynb
+++ b/Lab-10-TFX-Interactive/tfx-interactive-higgs.ipynb
@@ -268,15 +268,16 @@
       },
       "source": [
         "_data_root = tempfile.mkdtemp(prefix='tfx-data')\n",
-        "DATA_PATH = 'https://storage.googleapis.com/workshop-datasets/higgs/{}/data.csv'\n",
+        "GCS_DATA_PATH = 'https://storage.googleapis.com/workshop-datasets/higgs/{}/data.csv'\n",
+        "_data_path = os.path.join(_data_root, '{}', 'data.csv')\n",
         "\n",
-        "os.makedirs(os.path.join(_data_root, 'train'), exist_ok=True)\n",
-        "_train_data_path = os.path.join(_data_root, 'train', 'data.csv')\n",
-        "urllib.request.urlretrieve(DATA_PATH.format('train'), _train_data_path)\n",
+        "for folder in ['train', 'eval', 'test']:\n",
+        "    os.makedirs(os.path.join(_data_root, folder), exist_ok=True)\n",
+        "    urllib.request.urlretrieve(GCS_DATA_PATH.format(folder), _data_path.format(folder))\n",
         "\n",
-        "os.makedirs(os.path.join(_data_root, 'eval'), exist_ok=True)\n",
-        "_eval_data_path = os.path.join(_data_root, 'eval', 'data.csv')\n",
-        "urllib.request.urlretrieve(DATA_PATH.format('eval'), _eval_data_path)"
+        "_train_data_path = _data_path.format('train')\n",
+        "_eval_data_path = _data_path.format('eval')\n",
+        "_test_data_path = _data_path.format('test')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -299,7 +300,7 @@
         "colab": {}
       },
       "source": [
-        "!head {_eval_data_path}"
+        "!head {_train_data_path}"
       ],
       "execution_count": 0,
       "outputs": []
