--- a/Lab-10-TFX-Interactive/tfx_interactive.ipynb
+++ b/Lab-10-TFX-Interactive/tfx_interactive.ipynb
@@ -8,7 +8,8 @@
       "private_outputs": true,
       "collapsed_sections": [
         "qMj8ORjK27p9"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jarokaz/mlops-miniworkshop/blob/master/Lab-10-TFX-Interactive/tfx_interactive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -91,14 +102,26 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "5LwniiFz6hRr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "%tensorflow_version 2.x"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "bRbSCw-U-h_F",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "!pip install -q -U \\\n",
-        "  tensorflow==2.0.0 \\\n",
-        "  tfx==0.15.0rc0"
+        "  tfx==0.15.0"
       ],
       "execution_count": 0,
       "outputs": []
