--- a/Lab-01-TFX-Interactive/tfx_interactive.ipynb
+++ b/Lab-01-TFX-Interactive/tfx_interactive.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jarokaz/mlops-miniworkshop/blob/master/Lab-10-TFX-Interactive/tfx_interactive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jarokaz/mlops-miniworkshop/blob/master/Lab-01-TFX-Interactive/tfx_interactive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -71,11 +71,11 @@
         "\n",
         "This notebook demonstrates how to use Jupyter notebooks for TFX iterative development. \n",
         "\n",
-        "Working in an interactive notebook is useful when exploring data and when doing development of your ML pipelines. You should be aware that there are differences in the way interactive notebooks are orchestrated, and how they access metadata artifacts.\n",
+        "Working in an interactive notebook is useful when doing initial data exploriation, experimenting with models, and designing ML pipelines. You should be aware that there are differences in the way interactive notebooks are orchestrated, and how they access metadata artifacts.\n",
         "\n",
-        "In a production deployment of TFX you will use an orchestrator such as Apache Airflow, Kubeflow, or Apache Beam.  In an interactive notebook the notebook itself is the orchestrator, running each TFX component as you execute the notebook cells.\n",
+        "In a production deployment of TFX you will use an orchestrator such as Kubeflow Pipelines, or Apache Beam.  In an interactive notebook the notebook itself is the orchestrator, running each TFX component as you execute the notebook cells.\n",
         "\n",
-        "In a production deployment of TFX you will access metadata through the ML Metadata (MLMD) API.  MLMD stores metadata properties in a database such as MySQL, and stores the metadata payloads in a persistent store such as on your filesystem.  In an interactive notebook, both properties and payloads are stored in the /tmp directory on the Jupyter notebook or Colab server.\n",
+        "In a production deployment of TFX you will access metadata through the ML Metadata (MLMD) API.  MLMD stores metadata properties in a database such as MySQL, and stores the metadata payloads in a persistent store such as Google Cloud Storage.  In an interactive notebook, both properties and payloads are stored in the local file system of the Jupyter host.\n",
         "\n"
       ]
     },
@@ -87,7 +87,7 @@
       },
       "source": [
         "## Setup\n",
-        "First, we install the necessary packages, download data, import modules and set up paths.\n",
+        "First, you install the necessary packages, download data, import modules and set up paths.\n",
         "\n",
         "### Install TFX and TensorFlow\n"
       ]
@@ -127,7 +127,7 @@
       },
       "source": [
         "### Import packages\n",
-        "We import necessary packages, including standard TFX component classes."
+        "Import necessary packages, including standard TFDV and TFX component classes."
       ]
     },
     {
@@ -215,7 +215,7 @@
       },
       "source": [
         "### Download example data\n",
-        "We download the sample dataset for use in our TFX pipeline.  We're working with a variant of the [Online News Popularity](https://archive.ics.uci.edu/ml/datasets/online+news+popularity) dataset, which summarizes a heterogeneous set of features about articles published by Mashable in a period of two years. The goal is to predict how popular the article will be on social networks. Specifically, in the original dataset the objective was to predict the number of times each article will be shared on social networks. In this variant, the goal is to predict the article's popularity percentile. For example, if the model predicts a score of 0.7, then it means it expects the article to be shared more than 70% of all articles."
+        "You are working with a variant of the [Online News Popularity](https://archive.ics.uci.edu/ml/datasets/online+news+popularity) dataset, which summarizes a heterogeneous set of features about articles published by Mashable in a period of two years. The goal is to predict how popular the article will be on social networks. Specifically, in the original dataset the objective was to predict the number of times each article will be shared on social networks. In this variant, the goal is to predict the article's popularity percentile. For example, if the model predicts a score of 0.7, then it means it expects the article to be shared more than 70% of all articles."
       ]
     },
     {
