--- a/Lab-01-TFX-Interactive/tfx_interactive.ipynb
+++ b/Lab-01-TFX-Interactive/tfx_interactive.ipynb
@@ -166,6 +166,7 @@
         "from tfx.proto import trainer_pb2\n",
         "from tfx.utils.dsl_utils import external_input\n",
         "from tfx.proto import example_gen_pb2\n",
+        "from tfx.components.common_nodes.importer_node import ImporterNode\n",
         "\n",
         "from tensorflow_metadata.proto.v0 import anomalies_pb2\n",
         "from tensorflow_metadata.proto.v0 import schema_pb2\n",
@@ -243,17 +244,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "V5RjduOX4us-",
+        "id": "u5PKyfOLHD1s",
         "colab_type": "text"
       },
       "source": [
-        "Take a quick look at the CSV file."
+        "# Explore data\n",
+        "\n",
+        "Take a quick look at the CSV file.\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Hqn4wST2Bex5",
+        "id": "_4kfdwHFoGs-",
         "colab_type": "code",
         "colab": {}
       },
@@ -266,11 +269,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "u5PKyfOLHD1s",
+        "id": "cA72mYBmn2z3",
         "colab_type": "text"
       },
       "source": [
-        "# Explore data\n",
         "\n",
         "## Compute and visualize statistics\n",
         "\n",
@@ -609,10 +611,10 @@
         "from google.protobuf import text_format\n",
         "\n",
         "tf.io.gfile.makedirs(_output_dir)\n",
-        "schema_file = os.path.join(_output_dir, 'schema.pbtxt')\n",
-        "tfdv.write_schema_text(schema, schema_file)\n",
+        "_schema_file = os.path.join(_output_dir, 'schema.pbtxt')\n",
+        "tfdv.write_schema_text(schema, _schema_file)\n",
         "\n",
-        "!cat {schema_file}"
+        "!cat {_schema_file}"
       ],
       "execution_count": 0,
       "outputs": []
@@ -769,8 +771,6 @@
       "source": [
         "### The StatisticsGen Component\n",
         "\n",
-        "The `StatisticsGen` component computes descriptive statistics for your dataset.  The statistics that it generates can be visualized for review, and are used for example validation and to infer a schema.\n",
-        "\n",
         "In the previous section we showed how to generate and analyze statistics using TFDV directly. The StatisticsGen component is a wrapper around TFDV. It supports the workflows when you need to generate statistics as a step in an ML pipeline.\n",
         "\n",
         "Create a StatisticsGen component and run it."
@@ -842,7 +842,7 @@
       "source": [
         "### The SchemaGen Component\n",
         "\n",
-        "The `SchemaGen` component generates a schema for your data based on the statistics from StatisticsGen.  It is a wrapper around TFDV functions we reviewed in the previous steps. In most cases you would generate the schema as during the EDA exercise. In rare cases you may need to generate the schema as part of an ML pipeline and this is the role of this component.\n",
+        "The `SchemaGen` component generates a schema for your data based on the statistics from StatisticsGen.  It is a wrapper around TFDV functions we reviewed in the previous steps. In most cases you would generate the schema as during the EDA exercise. Sometimes you may need to generate the schema as part of an ML pipeline and this is the role of this component.\n",
         "\n",
         "Create a SchemaGen component and run it."
       ]
@@ -976,7 +976,7 @@
         "colab_type": "text"
       },
       "source": [
-        "This can be visualized using the `tfdv.display_anomalies()`. Since the component generated a new schema we will see the same anomaly as in the previous section."
+        "This can be visualized using the `tfdv.display_anomalies()`. Since the `SchemaGen` component generated a new schema based on the training data you will see the same anomaly as in the previous section."
       ]
     },
     {
@@ -988,6 +988,35 @@
       },
       "source": [
         "tfdv.display_anomalies(anomalies)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1gvGZShzpZm9",
+        "colab_type": "text"
+      },
+      "source": [
+        "### The ImporterNode Component\n",
+        "In the following steps you are going to use the schema you fixed and froze in the data exploration section. To import the fixed schema into the workflow you use the `ImporterNode` component."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T4BeeSxkq2qf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "schema_importer = ImporterNode(\n",
+        "    instance_name=\"Schema_Importer\",\n",
+        "    source_uri=_schema_file,\n",
+        "    artifact_type=tfx.types.standard_artifacts.Schema,\n",
+        "    reimport=False)\n",
+        "context.run(schema_importer)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1184,7 +1213,7 @@
         "# Performs transformations and feature engineering in training and serving.\n",
         "transform = Transform(\n",
         "    examples=example_gen.outputs['examples'],\n",
-        "    schema=infer_schema.outputs['schema'],\n",
+        "    schema=schema_importer.outputs['result'],\n",
         "    module_file=_transform_module_file)\n",
         "context.run(transform)"
       ],
