--- a/Lab-01-TFX-Interactive/tfx_interactive.ipynb
+++ b/Lab-01-TFX-Interactive/tfx_interactive.ipynb
@@ -605,13 +605,13 @@
         "colab": {}
       },
       "source": [
-        "_output_dir = os.path.join(tempfile.mkdtemp(),\n",
+        "_schema_dir = os.path.join(tempfile.mkdtemp(),\n",
         "                           'serving_model/online_news_simple')\n",
         "\n",
         "from google.protobuf import text_format\n",
         "\n",
-        "tf.io.gfile.makedirs(_output_dir)\n",
-        "_schema_file = os.path.join(_output_dir, 'schema.pbtxt')\n",
+        "tf.io.gfile.makedirs(_schema_dir)\n",
+        "_schema_file = os.path.join(_schema_dir, 'schema.pbtxt')\n",
         "tfdv.write_schema_text(schema, _schema_file)\n",
         "\n",
         "!cat {_schema_file}"
@@ -771,7 +771,7 @@
       "source": [
         "### The StatisticsGen Component\n",
         "\n",
-        "In the previous section we showed how to generate and analyze statistics using TFDV directly. The StatisticsGen component is a wrapper around TFDV. It supports the workflows when you need to generate statistics as a step in an ML pipeline.\n",
+        "In the previous section we showed how to generate and analyze statistics using TFDV directly. The StatisticsGen component is a wrapper around TFDV. It supports tworkflows where you need to generate statistics as a step in an ML pipeline.\n",
         "\n",
         "Create a StatisticsGen component and run it."
       ]
@@ -1013,7 +1013,7 @@
       "source": [
         "schema_importer = ImporterNode(\n",
         "    instance_name=\"Schema_Importer\",\n",
-        "    source_uri=_schema_file,\n",
+        "    source_uri=_schema_dir,\n",
         "    artifact_type=tfx.types.standard_artifacts.Schema,\n",
         "    reimport=False)\n",
         "context.run(schema_importer)"
@@ -1588,7 +1588,7 @@
         "trainer = Trainer(\n",
         "    module_file=_trainer_module_file,\n",
         "    transformed_examples=transform.outputs['transformed_examples'],\n",
-        "    schema=infer_schema.outputs['schema'],\n",
+        "    schema=schema_importer.outputs['result'],\n",
         "    transform_graph=transform.outputs['transform_graph'],\n",
         "    train_args=trainer_pb2.TrainArgs(num_steps=10000),\n",
         "    eval_args=trainer_pb2.EvalArgs(num_steps=5000))\n",
@@ -2277,6 +2277,19 @@
         "\n",
         "In this example you created a TFX pipeline in a Colab notebook, using the InteractiveContext.  Along the way you learned about each of the standard TFX components, but if the standard components don't meet all of your needs you can create your own custom components!  Custom components will be covered in a later lesson."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s9pILqqNygjr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
