--- a/Lab-01-TFX-Interactive/tfx_interactive.ipynb
+++ b/Lab-01-TFX-Interactive/tfx_interactive.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "TFX Interactive",
+      "name": "TFX Walk-through",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [
@@ -67,7 +67,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Exploring data with TFDV and experimenting with TFX components in an interactive context\n",
+        "# TFX Libraries and TFX Components Walk-through\n",
         "\n",
         "This notebook demonstrates how to use Jupyter notebooks for TFX iterative development. \n",
         "\n",
