--- a/Lab-10-KFP-AutoML/kfp_automl.ipynb
+++ b/Lab-10-KFP-AutoML/kfp_automl.ipynb
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +822,7 @@
     "    return (primary_metric, primary_metric_value)\n",
     "    \n",
     "    \n",
-    "log_regression_metrics_op = func_to_container_op(automl_log_regression_metrics, base_image='gcr.io/jk-caip/lab_301_components:latest')"
+    "log_regression_metrics_op = func_to_container_op(automl_log_regression_metrics, base_image=IMAGE_URI)"
    ]
   },
   {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
     "         logging.info(\"Model already deployed\")\n",
     "    \n",
     "    \n",
-    "deploy_model_op = func_to_container_op(automl_deploy_model, base_image='gcr.io/jk-caip/lab_301_components:latest')"
+    "deploy_model_op = func_to_container_op(automl_deploy_model, base_image=IMAGE_URI)"
    ]
   },
   {
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,9 +1011,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated property [core/project].\n",
+      "Fetching cluster endpoint and auth data.\n",
+      "kubeconfig entry generated for kfp-tfx-demo-cluster.\n"
+     ]
+    }
+   ],
    "source": [
     "!gcloud config set project $PROJECT_ID\n",
     "!gcloud container clusters get-credentials $CLUSTER_NAME --zone $CLUSTER_ZONE"
@@ -1028,9 +1038,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Pipeline link <a href=/pipeline/#/pipelines/details/eb201ee4-f86c-4f71-b6b5-0df340bdc7ac>here</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "pipeline_name = 'clv_training_pipeline'\n",
     "client = kfp.Client()\n",
@@ -1054,9 +1077,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Experiment link <a href=\"/pipeline/#/experiments/details/dd4dbb52-0302-4744-bffc-894a0bd3a815\" target=\"_blank\" >here</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run link <a href=\"/pipeline/#/runs/details/b35da344-8275-4c8b-a158-2a46f1069257\" target=\"_blank\" >here</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('Run 01', 'b35da344-8275-4c8b-a158-2a46f1069257')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment_name = 'CLV Training'\n",
     "run_name = 'Run 01'\n",
