--- a/Lab-11-TFX-KFP/notebooks/online_news.ipynb
+++ b/Lab-11-TFX-KFP/notebooks/online_news.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -114,13 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "XZY7Pnoxmoe8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow version: 1.15.0\n",
+      "TFX version: 0.15.0\n"
+     ]
+    }
+   ],
    "source": [
     "print('TensorFlow version: {}'.format(tf.__version__))\n",
     "print('TFX version: {}'.format(tfx.__version__))"
@@ -139,13 +148,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "BywX6OUEhAqn"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('/tmp/tfx-datak15w7xzl/data.csv', <http.client.HTTPMessage at 0x7f60ff4ea780>)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Download the example data.\n",
     "DATA_PATH = 'https://raw.githubusercontent.com/ageron/open-datasets/master/' \\\n",
@@ -167,13 +187,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Hqn4wST2Bex5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date,weekday,data_channel,slug,timedelta,n_tokens_title,n_tokens_content,n_unique_tokens,n_non_stop_words,n_non_stop_unique_tokens,n_hrefs,n_self_hrefs,n_imgs,n_videos,average_token_length,n_keywords,kw_min_min,kw_max_min,kw_avg_min,kw_min_max,kw_max_max,kw_avg_max,kw_min_avg,kw_max_avg,kw_avg_avg,self_reference_min_shares,self_reference_max_shares,self_reference_avg_shares,is_weekend,LDA_00,LDA_01,LDA_02,LDA_03,LDA_04,global_subjectivity,global_sentiment_polarity,global_rate_positive_words,global_rate_negative_words,rate_positive_words,rate_negative_words,avg_positive_polarity,min_positive_polarity,max_positive_polarity,avg_negative_polarity,min_negative_polarity,max_negative_polarity,title_subjectivity,title_sentiment_polarity,abs_title_subjectivity,abs_title_sentiment_polarity,n_shares_percentile\n",
+      "2013-01-07,0,Entertainment,amazon-instant-video-browser,731.0,12.0,219.0,0.663594466988,0.9999999923080001,0.8153846091120001,4.0,2.0,1.0,0.0,4.6803652968,5.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,496.0,496.0,496.0,0.0,0.5003312040810001,0.378278929586,0.0400046751006,0.0412626477296,0.0401225435029,0.521617145481,0.09256198347110002,0.045662100456600005,0.013698630137,0.769230769231,0.23076923076900002,0.378636363636,0.1,0.7,-0.35,-0.6,-0.2,0.5,-0.1875,0.0,0.1875,0.052984058117243465\n",
+      "2013-01-07,0,Business,ap-samsung-sponsored-tweets,731.0,9.0,255.0,0.604743080614,0.9999999932889999,0.79194630341,3.0,1.0,1.0,0.0,4.9137254902,4.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.7997556874230001,0.0500466753998,0.0500962518137,0.0501006734234,0.0500007119405,0.341245791246,0.148947811448,0.043137254901999995,0.0156862745098,0.733333333333,0.266666666667,0.286914600551,0.0333333333333,0.7,-0.11875,-0.125,-0.1,0.0,0.0,0.5,0.0,0.10144031883765513\n",
+      "2013-01-07,0,Business,apple-40-billion-app-downloads,731.0,9.0,211.0,0.575129530699,0.999999991597,0.6638655406399999,3.0,1.0,1.0,0.0,4.39336492891,6.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,918.0,918.0,918.0,0.0,0.21779228851799998,0.033334456999,0.0333514249339,0.033333535804599995,0.682188293744,0.702222222222,0.32333333333299996,0.0568720379147,0.00947867298578,0.8571428571430001,0.14285714285700002,0.495833333333,0.1,1.0,-0.46666666666699996,-0.8,-0.133333333333,0.0,0.0,0.5,0.0,0.523256987185955\n",
+      "2013-01-07,0,Entertainment,astronaut-notre-dame-bcs,731.0,9.0,531.0,0.503787877834,0.9999999969040001,0.6656346728620001,9.0,0.0,1.0,0.0,4.40489642185,7.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0285732164707,0.41929964178199997,0.4946508257399999,0.0289047184252,0.028571597581799998,0.42984968735,0.10070466570499999,0.0414312617702,0.0207156308851,0.666666666667,0.33333333333299997,0.38596517119199997,0.13636363636399998,0.8,-0.369696969697,-0.6,-0.166666666667,0.0,0.0,0.5,0.0,0.397071435778428\n",
+      "2013-01-07,0,Technology,att-u-verse-apps,731.0,13.0,1072.0,0.41564561695,0.999999998565,0.540889525766,19.0,19.0,20.0,0.0,4.682835820899999,7.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,545.0,16000.0,3151.15789474,0.0,0.028632810171500003,0.028793551732200003,0.028575184911199997,0.028571675323999998,0.885426777861,0.5135021228769999,0.281003475691,0.07462686567160001,0.0121268656716,0.8602150537630001,0.139784946237,0.411127435065,0.0333333333333,1.0,-0.22019230769200002,-0.5,-0.05,0.45454545454499995,0.13636363636399998,0.0454545454545,0.13636363636399998,0.028364948037534053\n",
+      "2013-01-07,0,Technology,beewi-smart-toys,731.0,10.0,370.0,0.559888577828,0.9999999954950001,0.698198195053,2.0,2.0,0.0,0.0,4.35945945946,9.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,8500.0,8500.0,8500.0,0.0,0.0222452755449,0.306717575824,0.022231277507799997,0.022224290310299998,0.626581580813,0.43740864869900004,0.07118419215189999,0.0297297297297,0.027027027026999998,0.52380952381,0.47619047618999993,0.350609996065,0.13636363636399998,0.6,-0.195,-0.4,-0.1,0.642857142857,0.214285714286,0.14285714285700002,0.214285714286,0.18989002118857834\n",
+      "2013-01-07,0,Lifestyle,bodymedia-armbandgets-update,731.0,8.0,960.0,0.418162618355,0.999999998339,0.5498338861300001,21.0,20.0,20.0,0.0,4.65416666667,10.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,545.0,16000.0,3151.15789474,0.0,0.0200816655822,0.114705387413,0.0200243688545,0.020015328171299997,0.825173249979,0.514480300844,0.268302724212,0.0802083333333,0.0166666666667,0.8279569892470001,0.17204301075300002,0.40203856749300004,0.1,1.0,-0.22447916666700002,-0.5,-0.05,0.0,0.0,0.5,0.0,0.04140601352033094\n",
+      "2013-01-07,0,Technology,canon-poweshot-n,731.0,12.0,989.0,0.433573634981,0.999999998415,0.572107764545,20.0,20.0,20.0,0.0,4.61779575329,9.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,545.0,16000.0,3151.15789474,0.0,0.0222243573751,0.150732973266,0.243435475507,0.022223603153800002,0.561383590699,0.543474234099,0.29861346986299997,0.0839231547017,0.0151668351871,0.84693877551,0.15306122449,0.427720492359,0.1,1.0,-0.24277777777800003,-0.5,-0.05,1.0,0.5,0.5,0.5,0.21317223287256584\n",
+      "2013-01-07,0,Technology,car-of-the-future-infographic,731.0,11.0,97.0,0.670103085875,0.9999999795919999,0.8367346768009999,2.0,0.0,0.0,0.0,4.8556701030900005,7.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.45825041501599995,0.0289794309233,0.028661883445200004,0.0296958587737,0.454412411842,0.538888888889,0.161111111111,0.0309278350515,0.020618556701,0.6,0.4,0.5666666666669999,0.4,0.8,-0.125,-0.125,-0.125,0.125,0.0,0.375,0.0,0.8123549591363132\n"
+     ]
+    }
+   ],
    "source": [
     "!head {_data_filepath}"
    ]
@@ -189,11 +226,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying file:///tmp/tfx-datak15w7xzl/data.csv [Content-Type=text/csv]...\n",
+      "- [1 files][ 20.1 MiB/ 20.1 MiB]                                                \n",
+      "Operation completed over 1 objects/20.1 MiB.                                     \n"
+     ]
+    }
+   ],
    "source": [
-    "_artifact_store_bucket = 'tfw-demo-artifact-store'\n",
+    "_artifact_store_bucket = 'kfp-tfx-demo-artifact-store'\n",
     "_gcs_data_root = 'gs://{}/{}/'.format(_artifact_store_bucket, 'data')\n",
     "\n",
     "!gsutil cp $_data_filepath $_gcs_data_root"
@@ -213,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -226,13 +273,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "_GpU9-JNXw-_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting transform_train.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile {_module_file}\n",
     "\n",
@@ -557,9 +612,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying file://transform_train.py [Content-Type=text/x-python]...\n",
+      "/ [1 files][ 10.5 KiB/ 10.5 KiB]                                                \n",
+      "Operation completed over 1 objects/10.5 KiB.                                     \n"
+     ]
+    }
+   ],
    "source": [
     "_gcs_module_file = 'gs://{}/{}/{}'.format(_artifact_store_bucket, 'module', _module_file)\n",
     "\n",
@@ -580,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -684,12 +749,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# GCP project and region to be used by AI Platform services\n",
-    "_project_id = 'jk-tfw-demo'\n",
+    "_project_id = 'jk-mlops-demo'\n",
     "_gcp_region = 'us-central1'\n",
     "\n",
     "# Connection setting to Cloud SQL based ML Metadata\n",
@@ -698,7 +763,7 @@
     "_metadata_config.mysql_db_service_port.environment_variable = 'MYSQL_SERVICE_PORT'\n",
     "_metadata_config.mysql_db_name.value = 'metadb'\n",
     "_metadata_config.mysql_db_user.value = 'root' \n",
-    "_metadata_config.mysql_db_password.value = ''\n",
+    "_metadata_config.mysql_db_password.value = 'victoria'\n",
     "\n",
     "# GCS folder to be used to output the artifacts generated by the pipeline\n",
     "_pipeline_name = 'online_news_pipeline'\n",
@@ -739,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,11 +843,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated property [core/project].\n",
+      "Fetching cluster endpoint and auth data.\n",
+      "kubeconfig entry generated for kfp-tfx-demo-cluster.\n"
+     ]
+    }
+   ],
    "source": [
-    "_cluster_name = 'tfw-demo-kfp-cluster'\n",
+    "_cluster_name = 'kfp-tfx-demo-cluster'\n",
     "_cluster_zone = 'us-central1-a'\n",
     "\n",
     "!gcloud config set project $_project_id\n",
@@ -791,9 +866,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Pipeline link <a href=/pipeline/#/pipelines/details/682b93c2-c005-4233-971c-155dd2e092f7>here</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'created_at': datetime.datetime(2019, 11, 18, 19, 10, 29, tzinfo=tzlocal()),\n",
+       " 'description': None,\n",
+       " 'error': None,\n",
+       " 'id': '682b93c2-c005-4233-971c-155dd2e092f7',\n",
+       " 'name': 'online_news_pipeline',\n",
+       " 'parameters': [{'name': 'pipeline-root',\n",
+       "                 'value': 'gs://kfp-tfx-demo-artifact-store/online_news_pipeline/'}],\n",
+       " 'url': None}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "_client = kfp.Client()\n",
     "_client.upload_pipeline(_pipeline_file_name, _pipeline_name)"
