--- a/Lab-01-TFDV/TFDV.ipynb
+++ b/Lab-01-TFDV/TFDV.ipynb
@@ -8,7 +8,8 @@
       "private_outputs": true,
       "collapsed_sections": [
         "tmC2aJK7uM6r"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jarokaz/mlops-miniworkshop/blob/master/Lab-01-TFDV/TFDV.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -80,11 +91,21 @@
         "## Setup\n",
         "First, we install the necessary packages, download data, import modules and set up paths.\n",
         "\n",
-        "### Install TFX and TensorFlow\n",
-        "\n",
-        "> #### Note\n",
-        "> Because of some of the updates to packages you must use the button at the bottom of the output of this cell to restart the runtime.  Following restart, you should rerun this cell."
+        "### Install TFX and TensorFlow\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8GHYUNf8DprL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "%tensorflow_version 2.x"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -95,7 +116,6 @@
       },
       "source": [
         "!pip install -q -U \\\n",
-        "  tensorflow==2.0.0 \\\n",
         "  tensorflow_data_validation"
       ],
       "execution_count": 0,
