--- a/lab-02-tfx-walkthrough/tfx-walkthrough.ipynb
+++ b/lab-02-tfx-walkthrough/tfx-walkthrough.ipynb
@@ -64,9 +64,7 @@
     "\n",
     "\n",
     "print(\"Tensorflow Version:\", tf.__version__)\n",
-    "print(\"TFX Version:\", tfx.__version__)\n",
-    "\n",
-    "tf.enable_eager_execution()"
+    "print(\"TFX Version:\", tfx.__version__)"
    ]
   },
   {
